@@ -27,7 +27,19 @@
       see https://github.com/translations-com/globallink-connect-cloud-api-java
     -->
     <gcc-restclient.version>3.1.3</gcc-restclient.version>
-    <cm.middle.core.version>2506.0.1</cm.middle.core.version>
+    <cm.middle.core.version>2512.0.0</cm.middle.core.version>
+    <error-prone.version>2.46.0</error-prone.version>
+    <nullaway.version>0.13.1</nullaway.version>
+    <!--
+     Error Prone Arguments
+     =====================
+
+     Must all be on a single line separated by spaces.
+
+     See <https://errorprone.info/docs/flags>
+     See <https://github.com/uber/NullAway/wiki/Configuration>
+    -->
+    <error-prone.args>-Xplugin:ErrorProne -XepAllSuggestionsAsWarnings -XepOpt:NullAway:JSpecifyMode=true -XepOpt:NullAway:OnlyNullMarked=true</error-prone.args>
   </properties>
 
   <dependencyManagement>
@@ -64,12 +76,7 @@
 
   <profiles>
     <profile>
-      <id>strict-checks</id>
-      <activation>
-        <property>
-          <name>!skipChecks</name>
-        </property>
-      </activation>
+      <id>gcc-strict-checks</id>
       <build>
         <plugins>
           <plugin>
@@ -79,6 +86,8 @@
               <failOnWarning>true</failOnWarning>
               <showDeprecation>true</showDeprecation>
               <showWarnings>true</showWarnings>
+              <!-- Required for Error Prone -->
+              <fork>true</fork>
               <compilerArgs>
                 <!-- Disable annotation processing to avoid version compatibility warnings -->
                 <!--
@@ -88,7 +97,37 @@
                      less than -source '17'
                 -->
                 <arg>-proc:none</arg>
+                <!-- ===============================[ Error Prone Settings ] -->
+                <!-- See https://errorprone.info/docs/installation -->
+                <arg>-XDcompilePolicy=simple</arg>
+                <arg>--should-stop=ifError=FLOW</arg>
+                <!-- necessary only if building with JDK21: https://github.com/google/error-prone/issues/5426 -->
+                <arg>-XDaddTypeAnnotationsToSymbol=true</arg>
+                <arg>${error-prone.args}</arg>
+                <!-- Work around IllegalAccessError for JDK 9+ modules -->
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
               </compilerArgs>
+              <annotationProcessorPaths>
+                <path>
+                  <groupId>com.google.errorprone</groupId>
+                  <artifactId>error_prone_core</artifactId>
+                  <version>${error-prone.version}</version>
+                </path>
+                <path>
+                  <groupId>com.uber.nullaway</groupId>
+                  <artifactId>nullaway</artifactId>
+                  <version>${nullaway.version}</version>
+                </path>
+              </annotationProcessorPaths>
             </configuration>
           </plugin>
         </plugins>
